[gd_scene load_steps=5 format=2]

[ext_resource path="res://GOL.gd" type="Script" id=1]
[ext_resource path="res://gol_tiles.png" type="Texture" id=2]

[sub_resource type="TileSet" id=3]
0/name = "gol_tiles.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 20, 20 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "gol_tiles.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 20, 0, 20, 20 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="RectangleShape2D" id=2]

[node name="GOL" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 64
centered_textures = true
format = 1

[node name="Timer" type="Timer" parent="."]

[node name="View" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="View"]
shape = SubResource( 2 )
disabled = true

[node name="Camera" type="Camera2D" parent="View"]
current = true

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Details" type="ColorRect" parent="GUI"]
margin_right = 280.0
margin_bottom = 66.0
color = Color( 0, 0, 0, 0.521569 )

[node name="Generation" type="RichTextLabel" parent="GUI/Details"]
margin_right = 150.0
margin_bottom = 15.0
text = "Generation:"

[node name="TimerStatus" type="RichTextLabel" parent="GUI/Details"]
margin_left = 150.0
margin_right = 300.0
margin_bottom = 15.0
text = "Paused"

[node name="WidthLabel" type="Label" parent="GUI/Details"]
margin_top = 24.0
margin_right = 42.0
margin_bottom = 38.0
text = "Width:"

[node name="HeightLabel" type="Label" parent="GUI/Details"]
margin_left = 152.0
margin_top = 24.0
margin_right = 198.0
margin_bottom = 38.0
text = "Height:"

[node name="WidthEdit" type="LineEdit" parent="GUI/Details"]
margin_left = 75.0
margin_top = 15.0
margin_right = 133.0
margin_bottom = 39.0
align = 2
max_length = 3

[node name="HeightEdit" type="LineEdit" parent="GUI/Details"]
margin_left = 216.0
margin_top = 16.0
margin_right = 274.0
margin_bottom = 40.0
align = 2
max_length = 3

[node name="ConfirmButton" type="Button" parent="GUI/Details"]
margin_left = 109.0
margin_top = 40.0
margin_right = 171.0
margin_bottom = 64.0
text = "Resize"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="GUI/Details/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
